--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="row">
-                <div class="Amount">
+                <div class="Amount active">
                     <h3>100tk</h3>
                 </div>
                 <div class="Amount">
