--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
             <div class="fix_promo_area">
                 <div class="columns">
                     <div class="column-1">
+                        <img src="images/food.png" alt="">
                         <h2>Food for a family</h2>
                         <p>Provides nutritious food, wholesome food, funds, and vocational training to people suffering from lack of it.</p>
                     </div>
                     <div class="column-2">
+                        <img src="images/shelter.png" alt="">
                         <h2>Shelter for a family</h2>
                         <p>Support to families, children, young people, volunteers, refugees, migrants and other individuals with special circumstances.</p>
                     </div>
                     <div class="column-3">
+                        <img src="images/Frame-1.png" alt="">
                         <h2>Education for a child</h2>
                         <p>Keep children getting a good education, including tutoring programs, scholarships, learning spaces, computer training.</p>
                     </div>
