--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
                 </div>
             </div>
 
+            <div class="Get_My_Updates">
+                <h1>Get My Updates</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <form>
+                <input type="text" placeholder="Email" id="email-input">
+                <input type="submit" value="Subscribe" id="Subscribe-button">
+            </form>
+            </div>
+
             <footer>
                 <div class="footer-content">
                     <h2>Be Humble</h2>
